# ctf-workspace

./: .gitignore
PwnableIL/: exploit.py
PwnableIL/chess/: exploit.py
PwnableIL/dog2/: dog2  exploit.py
PwnableIL/enchantment/: .main.c.swp  exploit.py  gadgets.txt  main.c
PwnableIL/hash/: MD5Col.py  exploit.py
PwnableIL/marathon/to_users_marathon/: Dockerfile  Makefile  exploit.py  main.c  marathon
PwnableIL/professor/: .exploit.py.swp  .solve.py.swp  Dockerfile  exploit.py  gadgets.txt  libpthread-2.31.so_patched  professor_patched  solve.py
PwnableIL/ptraceme/: exploit.py
PwnableIL/shellcope/: exploit.py  input.txt
PwnableIL/stacking/: exploit.py
PwnableIL/theater/: exploit.py
PwnableIL/welcome/: exploit.py  input.txt
crackmes/S3c_Cult's XORcist/: .code.swp  code  code.c
fuzzer/: chal  chal.c  fuzzer  fuzzer.c
idan/binary_search_tutorial/vuln_research_chal_1/: CMakeLists.txt  Dockerfile  build_linux.sh
idan/escaping_the_matrix/: CMakeLists.txt  Dockerfile  build_linux.sh
idan/fun_land/vuln_research_chal_6/: CMakeLists.txt  Dockerfile  build_linux.sh
idan/next_gen_auth/: flag.txt
idan/next_gen_auth/vuln_research_chal_8/: .remote.py.swp  CMakeLists.txt  Dockerfile  build_linux.sh  exploit.py  remote.py
idan/vacation/: CMakeLists.txt  Dockerfile  exploit.py  exploit2.py  remote.py
idan/vacation/src/: .chal.cpp.swp  chal.cpp  room_addr.cpp  room_addr.h  room_info.h
pico/: address_leaker.py  exploit.py  flag.txt  gadgets.txt
pico/picoCTF2026/: dump  gadgets.txt  input.txt
pico/picoCTF2026/BinaryDigits/: bish
(+28 files in other folders)
